2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GClosure.xs (gperl_closure_marshal): Synchronize the way signals
	with no return value are handled with how it's done in
	gperl_signal_class_closure_marshal.  This means that Perl handlers
	for these kinds of signals are now always called in void context,
	as they should be.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MANIFEST
	* GType.xs (gperl_signal_class_closure_marshal)
	* t/signal_marshal.t: Correctly handle signals with no return type
	when invoking signal class closures.  Patch by Kevin Ryde.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs (gperl_register_fundamental_full): Handle
	wrapper_class_by_type being NULL gracefully.  Patch by Kevin Ryde.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.xs: In Glib::filename_from_uri and filename_to_uri, use the
	gchar converters for the hostname.  Patch by Kevin Ryde.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GClosure.xs (gperl_callback_invoke): Use the <"%s", pointer>
	pattern when passing an error string pointer to croak().

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GType.xs
	* t/c.t: Make the various Glib::Flags methods more robust with
	respect to receiving undefined input.  Patch by Kevin Ryde.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GBoxed.xs (gperl_register_boxed)
	* GObject.xs (gperl_register_object)
	* GType.xs (gperl_register_fundamental): When inserting into the
	package → type hash tables, use g_hash_table_replace instead of
	_insert so that the new string pointer is used as the key.  Patch
	by Kevin Ryde.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.212.

2009-02-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/a.t
	* GLog.xs: Make sure that messages with % chars in them make it
	through Glib::log() and friends safely.

2009-02-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>
