@@ -144,9 +144,6 @@ $glib->save_config ('build/IFiles.pm');
 our @exports;
 require 'Glib.exports';
 
-my $configure_requires_yaml =
-  Glib::MakeHelper->get_configure_requires_yaml(%PREREQ_PM);
-
 WriteMakefile(
     NAME		=> 'Glib',
     VERSION_FROM	=> 'Glib.pm', # finds $VERSION
@@ -157,11 +154,11 @@ WriteMakefile(
     FUNCLIST		=> \@exports,
     DL_FUNCS		=> { Glib => [] },
 
-    $glib ? $glib->get_makefile_vars : (),
+    META_MERGE		=> {
+      configure_requires => \%PREREQ_PM,
+      no_index           => { files => [qw/xsapi.pod.head xsapi.pod.foot/] } },
 
-    $ExtUtils::MakeMaker::VERSION >= 6.46
-      ? (META_MERGE => { configure_requires => \%PREREQ_PM })
-      : (EXTRA_META => $configure_requires_yaml),
+    $glib ? $glib->get_makefile_vars : (),
 );
 
 #=unstable
